--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -25,6 +25,11 @@
   > blockquote {
     padding-left: calc(2.25rem + 1rem);
   }
+
+  /* Code block needs gutter too */
+  > pre {
+    padding-left: 2.25rem;
+  }
   
   /* Prose styling */
   > * + * {
@@ -118,9 +123,14 @@
     font-weight: 400;
     line-height: 1.625;
     letter-spacing: 0;
-    padding-left: 1.5rem;
     margin: 0.75rem 0;
 
+    /* Indent only nested lists */
+    li > ul,
+    li > ol {
+      padding-left: 1.5rem;
+    }
+ 
     li {
       p {
         margin: 0.25rem 0;
